JSON: Infinite recursion fixed