@@ -9,9 +9,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 
+import javax.persistence.EntityNotFoundException;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class TariffService {
@@ -24,39 +23,25 @@ public class TariffService {
 
     public List<TariffDto> getAllTariffs() {
         List<Tariff> tariffEntities = tariffRepository.findAll();
-        return tariffEntities.stream().map(this::convertToDto).collect(Collectors.toList());
+        return tariffEntities.stream().map(this::convertToDto).toList();
     }
 
-    public TariffDto findById(Long id) throws Exception {
-        Optional<Tariff> tariffEntity = tariffRepository.findById(id);
-        if (tariffEntity.isPresent()) {
-            return convertToDto(tariffEntity.get());
-        } else {
-            throw new Exception("Error 404 Not found");
-        }
+    public TariffDto findById(Long id) {
+        Tariff tariff = tariffRepository.findById(id).orElseThrow(() -> new EntityNotFoundException(id.toString()));
+        return convertToDto(tariff);
     }
 
-    public Tariff getEntityById(Long id) throws Exception {
-        Optional<Tariff> tariffEntity = tariffRepository.findById(id);
-        if (tariffEntity.isPresent()) {
-            return tariffEntity.get();
-        } else {
-            throw new Exception("Error 404 Not found");
-        }
+    public TariffDto findByTariffName(String tariffName) {
+        Tariff tariff = getEntityByName(tariffName);
+        return convertToDto(tariff);
     }
 
-
-    public Tariff addTariff(TariffDto tariffDto) {
-        Tariff newTariff = new Tariff(tariffDto.getTariffName(), tariffDto.getTariffPrice());
-        return tariffRepository.save(newTariff);
+    public Tariff getEntityByName(String tariffName) {
+        return tariffRepository.findByTariffName(tariffName).orElseThrow(() -> new EntityNotFoundException(tariffName));
     }
 
     public Tariff saveTariff(Tariff tariff) {
         return tariffRepository.save(tariff);
-    }
-
-    public void deleteById(Long id) {
-        tariffRepository.deleteById(id);
     }
 
     public TariffDto convertToDto(Tariff tariffEntity) {
